Add Login.js to containers folder. Add bootstrap. Add Login form ro Login.js

--- a/school-project-client/src/containers/App.css
+++ b/school-project-client/src/containers/App.css
@@ -3,6 +3,14 @@
   width: 17%;
 }
 
-.header {
+.dark-background {
   background-color: #252729;
+}
+
+.header {
+  border-bottom: 5px solid #000;
+}
+
+.form-styling {
+  background-color: #fff;
 }
